fixed progress loader on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,3 +42,12 @@ body {
   visibility: hidden !important;
   opacity: 0 !important;
 }
+
+@media (max-width: 834px) {
+  #domLoader {
+    justify-content: center;
+    p {
+      margin-right: 0vw;
+    }
+  }
+}
